--- a/register.html
+++ b/register.html
@@ -70,7 +70,7 @@
         </div>
       </main>
       <footer>
-        <h4>&copy; Lab Pemrograman Komputer 2025</h4>
+        <h4>&copy; Lab Pemrograman Komputer 2025.</h4>
       </footer>
     </div>
   </body>
